apps/immich-test/env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
spec:
  template:
    spec:
      containers:
        - name: immich
